syntax = "proto3";

option csharp_namespace = "ZeafloServer.Proto.PlaceImages";

message GrpcPlaceImage {
  string id = 1;
  string placeId = 2;
  string imageUrl = 3;
  bool isDeleted = 4;
}

message GetPlaceImagesByIdsResult {
  repeated GrpcPlaceImage placeImages = 1;
}

message GetPlaceImagesByIdsRequest {
  repeated string ids = 1;
}